--- a/events.html
+++ b/events.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
+    <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" href="css/events.css" />
     <script src="script/cart.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
@@ -27,6 +28,7 @@
             <a href="events.html">Events</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a href="blog.html">Blog</a>
           </nav>
         </div>
 
@@ -38,89 +40,96 @@
 
     <main>
       <section>
-        <h1>Elevate Your Events with Our Dessert Tables and Boxes!</h1>
-        <p>
-          At Manaly's Dessert Delivery, we believe that desserts are the perfect way 
-          to make any event extra special. Our custom dessert tables and boxes are 
-          designed to be the highlight of your celebration, offering a delectable array 
-          of sweet treats that will impress your guests and enhance your occasion.
+        <h1 class="title">
+          Elevate Your Events with Our Dessert Tables and Boxes!
+        </h1>
+        <p class="regular-text">
+          At Manaly's Dessert Delivery, we believe that desserts are the perfect
+          way to make any event extra special. Our custom dessert tables and
+          boxes are designed to be the highlight of your celebration, offering a
+          delectable array of sweet treats that will impress your guests and
+          enhance your occasion.
         </p>
       </section>
 
       <section>
-        <h2>What We Offer</h2>
-        
+        <h2 class="session-title">What We Offer</h2>
+
         <article>
-          <h3>Customized Dessert Tables</h3>
-          <p>
-          Whether you’re hosting a wedding, corporate event, birthday party, or any 
-          other gathering, our dessert tables can be tailored to fit the theme and style 
-          of your event. Choose from a selection of our gourmet cakes, pastries, and 
-          confections to create a spread that’s both beautiful and delicious. We also 
-          offer custom packages that include dessert bar setups, designed to match 
-          your event theme. These packages feature menu signs, stands, delivery, and 
-          cleanup. We require a rectangular table with a cloth on it to be ready for setup. 
-          Additionally, we provide donut walls, including our custom donut wall that can 
-          hold up to 30 donuts.
+          <h3 class="session-subtitle">Customized Dessert Tables</h3>
+          <p class="regular-text">
+            Whether you're hosting a wedding, corporate event, birthday party,
+            or any other gathering, our dessert tables can be tailored to fit
+            the theme and style of your event. Choose from a selection of our
+            gourmet cakes, pastries, and confections to create a spread that’s
+            both beautiful and delicious. We also offer custom packages that
+            include dessert bar setups, designed to match your event theme.
+            These packages feature menu signs, stands, delivery, and cleanup. We
+            require a rectangular table with a cloth on it to be ready for
+            setup. Additionally, we provide donut walls, including our custom
+            donut wall that can hold up to 30 donuts.
           </p>
         </article>
-      
+
         <article class="gallery">
           <div class="gallery-items">
-            <img src="image/events/table1.jpg" alt="">
-            <img src="image/events/table2.jpg" alt="">
-            <img src="image/events/table3.JPG" alt="">
-            <img src="image/events/table4.JPG" alt="">
-            <img src="image/events/table5.JPG" alt="">
-            <img src="image/events/table6.JPG" alt="">
-            <img src="image/events/table7.JPG" alt="">
-            <img src="image/events/table8.JPG" alt="">
+            <img src="image/events/table1.jpg" alt="" />
+            <img src="image/events/table2.jpg" alt="" />
+            <img src="image/events/table3.JPG" alt="" />
+            <img src="image/events/table4.JPG" alt="" />
+            <img src="image/events/table5.JPG" alt="" />
+            <img src="image/events/table6.JPG" alt="" />
+            <img src="image/events/table7.JPG" alt="" />
+            <img src="image/events/table8.JPG" alt="" />
           </div>
         </article>
 
         <article class="dessert-box-container">
-          <h3>Deluxe Dessert Boxes</h3>
+          <h3 class="session-subtitle">Deluxe Dessert Boxes</h3>
           <div class="dessert-box-details">
             <div>
-              <p>
-                For a more personalized and portable dessert option, our deluxe dessert boxes 
-                are perfect. Each box is filled with a curated selection of our finest treats, including 
-                cakes, cookies, pastries, and other confections. These boxes can be customized to 
-                suit your event's theme and are a delightful way to thank your guests or provide a 
-                sweet takeaway. 
+              <p class="regular-text">
+                For a more personalized and portable dessert option, our deluxe
+                dessert boxes are perfect. Each box is filled with a curated
+                selection of our finest treats, including cakes, cookies,
+                pastries, and other confections. These boxes can be customized
+                to suit your event's theme and are a delightful way to thank
+                your guests or provide a sweet takeaway.
               </p>
-              <p>
-                <strong>Features:</strong> Beautifully packaged boxes with a variety of desserts, customizable 
-                options to match your event theme, and convenient for guests to take home.
+              <p class="regular-text">
+                <strong>Features:</strong> Beautifully packaged boxes with a
+                variety of desserts, customizable options to match your event
+                theme, and convenient for guests to take home.
               </p>
             </div>
-            <aside class="dessert-box-images">
-              <img src="image/events/box1.jpg" alt="">
-              <img src="image/events/box2.jpg" alt="">
+            <aside class="dessert-box-image">
+              <img src="image/events/box1.jpg" alt="" />
             </aside>
           </div>
         </article>
       </section>
 
       <section>
-        <h2>Contact Us</h2>
-        <p>
-          Ready to add a touch of sweetness to your next event? Reach out to us to 
-          discuss your event details and dessert preferences. We’re here to help you 
-          choose the perfect options and create a customized plan for a memorable 
-          experience.
+        <h2 class="session-title">Contact Us</h2>
+        <p class="regular-text">
+          Ready to add a touch of sweetness to your next event? Reach out to us
+          to discuss your event details and dessert preferences. We're here to
+          help you choose the perfect options and create a customized plan for a
+          memorable experience.
         </p>
-        <p>
-          Our team is excited to collaborate with you to design a dessert plan that aligns 
-          perfectly with your vision. We’ll assist with everything from designing your dessert 
-          table layout to ensuring a flawless event setup. On the day of the event, we will 
-          manage all aspects of setup and delivery for your dessert table, allowing you to 
-          focus on enjoying the celebration. We also take care of the cleanup for dessert 
-          tables, or you can enjoy the convenience of our dessert boxes with minimal 
+        <p class="regular-text">
+          Our team is excited to collaborate with you to design a dessert plan
+          that aligns perfectly with your vision. We'll assist with everything
+          from designing your dessert table layout to ensuring a flawless event
+          setup. On the day of the event, we will manage all aspects of setup
+          and delivery for your dessert table, allowing you to focus on enjoying
+          the celebration. We also take care of the cleanup for dessert tables,
+          or you can enjoy the convenience of our dessert boxes with minimal
           cleanup required.
         </p>
-        <p>
-          We look forward to making your event unforgettable with our exquisite desserts!
+        <p class="regular-text">
+          We look forward to making your event unforgettable with our exquisite
+          desserts!
         </p>
       </section>
     </main>
