--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
+    <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/about.css" />
     <script src="script/cart.js" defer></script>
@@ -27,6 +28,7 @@
             <a href="events.html">Events</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a href="blog.html">Blog</a>
           </nav>
         </div>
 
@@ -37,68 +39,71 @@
     </header>
 
     <main>
-        <section>
-          <h2>About Us</h2>
-          <h4>Welcome to Manaly's Dessert Delivery!</h4>
-          <p>
-            At Manaly's, we are a dedicated team of dessert enthusiasts committed to 
-            bringing you the finest cakes and desserts right to your door. As a ghost kitchen, 
-            we specialize exclusively in delivery and pickup options, allowing us to focus on 
-            providing a seamless and efficient service. Our modern, clean approach ensures 
-            that every dessert we offer is crafted from the finest ingredients. Our greatest joy 
-            comes from witnessing the delight our cakes and desserts bring to our clients.
-          </p>
-        </section>
-  
-        <section>
-          <h3>Meet the Founders</h3>
+      <h1 class="title">About Us</h1>
 
-          <article class="founder-pics">
-            <img src="" alt="">
-            <div>
-              <h4>Anny</h4>
-              <p>
-               Anny is the creative force behind our dessert creations. Her passion 
-               for baking and innovative spirit ensure that each dessert is not just a 
-               treat, but a true work of art.
-              </p>
-            </div>
-          </article>
-  
-          <article class="founder-pics">
-            <img src="" alt="">
-             <div>
-              <h4>Maho</h4>
-              <p>
-                Maho handles the overall operations of the kitchen, ensuring that 
-                every dessert is prepared with the utmost care and precision.
-               </p>
-             </div>
-          </article>
-  
-          <article class="founder-pics">
-            <img src="" alt="">
-             <div>
-              <h4>Nathallye</h4>
-              <p>
-                Nathallye oversees web development and social media. She ensures
-                our online presence is engaging and up to date, making sure you never 
-                miss out on our latest treats and promotions.
-               </p>
-             </div>
-          </article>
-  
-          <article class="founder-pics">
-            <img src="" alt="">
-            <div>
-              <h4>Alicia</h4>
-             <p>
-              Alicia manages the legal and business aspects of our operations, ensuring
-              everything runs smoothly and complies with regulations.
-             </p>
-            </div>
-          </article>
-        </section>
+      <section>
+        <h2 class="session-title">Welcome to Manaly's Dessert Delivery!</h2>
+        <p class="regular-text">
+          At Manaly's, we are a dedicated team of dessert enthusiasts committed
+          to bringing you the finest cakes and desserts right to your door. As a
+          ghost kitchen, we specialize exclusively in delivery and pickup
+          options, allowing us to focus on providing a seamless and efficient
+          service. Our modern, clean approach ensures that every dessert we
+          offer is crafted from the finest ingredients. Our greatest joy comes
+          from witnessing the delight our cakes and desserts bring to our
+          clients.
+        </p>
+      </section>
+
+      <section>
+        <h2 class="session-title">Meet the Founders</h2>
+
+        <article class="founder-pics">
+          <img src="image/staff/.jpg" alt="" />
+          <div>
+            <h3 class="session-subtitle">Anny</h3>
+            <p class="regular-text">
+              Anny is the creative force behind our dessert creations. Her
+              passion for baking and innovative spirit ensure that each dessert
+              is not just a treat, but a true work of art.
+            </p>
+          </div>
+        </article>
+
+        <article class="founder-pics">
+          <img src="" alt="" />
+          <div>
+            <h3 class="session-subtitle">Maho</h3>
+            <p class="regular-text">
+              Maho handles the overall operations of the kitchen, ensuring that
+              every dessert is prepared with the utmost care and precision.
+            </p>
+          </div>
+        </article>
+
+        <article class="founder-pics">
+          <img src="image/staff/nath.jpg" alt="" />
+          <div>
+            <h3 class="session-subtitle">Nathallye</h3>
+            <p class="regular-text">
+              Nathallye oversees web development and social media. She ensures
+              our online presence is engaging and up to date, making sure you
+              never miss out on our latest treats and promotions.
+            </p>
+          </div>
+        </article>
+
+        <article class="founder-pics">
+          <img src="" alt="" />
+          <div>
+            <h3 class="session-subtitle">Alicia</h3>
+            <p class="regular-text">
+              Alicia manages the legal and business aspects of our operations,
+              ensuring everything runs smoothly and complies with regulations.
+            </p>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
