--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
+    <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/contact.css" />
     <script src="script/cart.js" defer></script>
+    <script src="script/contact.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
       crossorigin="anonymous"
@@ -13,7 +16,6 @@
     <title>Contact</title>
     <link rel="stylesheet" href="contact.css" />
   </head>
-
   <body>
     <header>
       <div class="header-container">
@@ -28,6 +30,7 @@
             <a href="events.html">Events</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a href="blog.html">Blog</a>
           </nav>
         </div>
 
@@ -37,22 +40,18 @@
       </div>
     </header>
     <div class="contact-container">
-      <h1>Contact us</h1>
-      <p>Our address is:</p>
-      <p>101, Smith Street, Vancouver, BC</p>
-      <p>Phone: 123-456-789</p>
-      <p>Sharing hapiness everywhere!<br />Join us!</p>
+      <h1 class="title">Contact us</h1>
+      <p class="regular-text">Our address is:</p>
+      <p class="regular-text">101, Smith Street, Vancouver, BC</p>
+      <p class="regular-text">Phone: 123-456-789</p>
+      <p class="regular-text">Sharing hapiness everywhere!<br />Join us!</p>
 
-      <form action="/submit-form" method="post">
+      <!-- todo: validade this form -->
+
+      <form action="index.html" method="post">
         <div class="form-group">
           <label for="name">Type your name</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Type your name"
-            required
-          />
+          <input type="text" id="name" name="name" required />
         </div>
         <div class="form-group">
           <label for="email">Please enter a valid email address:</label>
@@ -60,7 +59,7 @@
             type="email"
             id="email"
             name="email"
-            placeholder="Please enter a valid email address:"
+            placeholder="user@email.com"
             required
           />
         </div>
@@ -69,11 +68,11 @@
           <textarea
             id="message"
             name="message"
-            placeholder="Type your message"
+            placeholder="..."
             required
           ></textarea>
         </div>
-        <button type="submit">Send</button>
+        <button class="contact-button" id="contact-button" type="submit">Send</button>
       </form>
     </div>
   </body>
